Breakpoints for  980px -  complete

--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -5,19 +5,20 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header class="header1">
-		<div>
-			<secion class="namecontainer">
+		<div class="container">
+			<section class="namecontainer">
 				<section class="name">
 					<h1>
 						<strong>Aaron Lee</strong>
 					</h1>
 				</section>
-			</secion>
+			</section>
 			<!-- Top Nav Menu -->
-			<section class="nav">
+			<section class="nav navalign">
 				<ul>
 					<li>
 						<a href="index.html" alt="About Me" class="navlink">About</a>
@@ -35,7 +36,7 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<div>
+		<div class="container">
 			<!-- Contact Header -->
 			<div class="box1">
 				<section>
@@ -45,17 +46,16 @@
 						</h1>
 					</header>
 				</section>
-				<section class="box3">
-					<form>
+
+					<form class="box3">
 						<span>Name</span>
-						<input type="text" name="fullname" value="John Doe">
+						<input type="text" name="fullname" value="John Doe" class="box3">
 						<span>Email</span>
 						<input type="text" name="email" value="example@gmail.com">
 						<span>Message</span>
 						<textarea class="message"></textarea>
 						<input type="submit" name="Submit">
 					</form>
-				</section>
 			</div>
 		</div>
 		<div>
