--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header class="header1">
-		<div>
+		<div class="container">
 			<section class="namecontainer">
 				<section class="name">
 					<h1>
@@ -17,7 +18,7 @@
 				</section>
 			</section>
 			<!-- Top Nav Menu -->
-			<section class="nav">
+			<section class="nav navalign">
 				<ul>
 					<li>
 						<a href="index.html" alt="About Me" class="navlink">About</a>
@@ -35,7 +36,7 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<div>
+		<div class="container">
 			<!-- About Me Header-->
 			<div class="box1">
 				<section>
