--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -5,19 +5,20 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header class="header1">
-		<div>
-			<secion class="namecontainer">
+		<div class="container">
+			<section class="namecontainer">
 				<section class="name">
 					<h1>
 						<strong>Aaron Lee</strong>
 					</h1>
 				</section>
-			</secion>
+			</section>
 			<!-- Top Nav Menu -->
-			<section class="nav">
+			<section class="nav navalign">
 				<ul>
 					<li>
 						<a href="index.html" alt="About Me" class="navlink">About</a>
@@ -35,7 +36,7 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<div>
+		<div class="container">
 			<!-- Portfolio Header -->
 			<div class="box1">
 				<section>
@@ -47,23 +48,23 @@
 				</section>
 				<section>
 					<div class="imagecontainer1">
-						<img src="assets/images/hangman.jpg">
+						<img src="assets/images/hangman.jpg" class="thumbsize">
 						<div class="smallbanner">Hangman</div>
 					</div>
 					<div class="imagecontainer2">
-						<img src="assets/images/rpg_game.jpg">
+						<img src="assets/images/rpg_game.jpg" class="thumbsize">
 						<div class="smallbanner">RPG Game</div>
 					</div>
 					<div class="imagecontainer1">
-						<img src="assets/images/trivia_game.jpg">
+						<img src="assets/images/trivia_game.jpg" class="thumbsize">
 						<div class="smallbanner">Trivia Game</div>
 					</div>
 					<div class="imagecontainer2">
-						<img src="assets/images/info_widget.jpg">
+						<img src="assets/images/info_widget.jpg" class="thumbsize">
 						<div class="smallbanner">UT Info Widget</div>
 					</div>
 					<div class="imagecontainer1">
-						<img src="assets/images/rock_paper_sci.jpg">
+						<img src="assets/images/rock_paper_sci.jpg" class="thumbsize">
 						<div class="smallbanner">Rock Paper Scissors</div>
 					</div>
 				</section>
