--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -36,7 +36,7 @@
 		</div>
 	</header>
 	<div class="wrapper">
-		<div class="container">
+		<div class="container container2">
 			<!-- Portfolio Header -->
 			<div class="box1">
 				<section>
@@ -72,25 +72,15 @@
 		</div>
 		<div>
 			<!-- Connect with Me Sidebar -->
+	<div>
+			<!-- Connect with Me Sidebar -->
 			<div class="box2">
-				<section>
-					<header class="header3">
-						<h2>Connect with Me</h2>
-					</header>
-				</section>
-				<section>
-					<ul>
-						<li>
-							<a href="https://github.com/Worldedit05" alt="Github Profile"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
-						</li>
-						<li>
-							<a href="https://www.linkedin.com/in/worldedit" alt="LinkedIn Profile"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62" class="midicon"></a>
-						</li>
-						<li>
-							<a href="https://stackoverflow.com/users/6590906/aaron-lee" alt="stack overflow Profile"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
-						</li>
-					</ul>
-				</section>
+				
+				<h2 class="header3">Connect with Me</h2>				
+				<a href="https://github.com/Worldedit05" class="social" alt="Github Profile"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
+				<a href="https://www.linkedin.com/in/worldedit" class="social" alt="LinkedIn Profile"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62"></a>			
+				<a href="https://stackoverflow.com/users/6590906/aaron-lee" class="social" alt="stack overflow Profile"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
+				
 			</div>
 		</div>
 	</div>
