--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Aaron Lee - University of Texas Bootcamp</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assignment1/assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assignment1/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="ßassets/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
