Bug fix to URL path

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -4,7 +4,7 @@
 	<title>Aaron Lee - University of Texas Bootcamp</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="ßassets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
