--- a/assignment1/contact.html
+++ b/assignment1/contact.html
@@ -72,6 +72,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 		<div class="push"></div>
 		<footer class="footer">
 			&copy; Copyright 2016 Aaron Lee
