--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -84,6 +84,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 		<div class="push"></div>
 		<footer class="footer">
 			&copy; Copyright 2016 Aaron Lee
