--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Aaron Lee - University of Texas Bootcamp</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aaron Lee - University of Texas Bootcamp</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-	<header class="header1">
-		<div class="container">
-			<section class="namecontainer">
-				<section class="name">
-					<h1>
+    <header class="header1">
+        <div class="container">
+            <section class="namecontainer">
+                <section class="name">
+                    <h1>
 						<strong>Aaron Lee</strong>
 					</h1>
-				</section>
-			</section>
-			<!-- Top Nav Menu -->
-			<section class="nav navalign">
-				<ul>
-					<li>
-						<a href="index.html" alt="About Me" class="navlink">About</a>
-					</li>
-					<span>&#124;</span>
-					<li>
-						<a href="portfolio.html" alt="Portfolio" class="navlink">Portfolio</a>
-					</li>
-					<span>&#124;</span>
-					<li>
-						<a href="contact.html" alt="Contact Me" class="navlink">Contact</a>
-					</li>
-				</ul>
-			</section>
-		</div>
-	</header>
-	<div class="wrapper">
-		<div class="container container2">
-			<!-- About Me Header-->
-			<div class="box1">
-				<section>
-					<header class="header2">
-						<h1>
+                </section>
+            </section>
+            <!-- Top Nav Menu -->
+            <section class="nav navalign">
+                <ul>
+                    <li>
+                        <a href="index.html" alt="About Me" class="navlink">About</a>
+                    </li>
+                    <span>&#124;</span>
+                    <li>
+                        <a href="portfolio.html" alt="Portfolio" class="navlink">Portfolio</a>
+                    </li>
+                    <span>&#124;</span>
+                    <li>
+                        <a href="contact.html" alt="Contact Me" class="navlink">Contact</a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+    </header>
+    <div class="wrapper">
+        <div class="container container2">
+            <!-- About Me Header-->
+            <div class="box1">
+                <section>
+                    <header class="header2">
+                        <h1>
 							<strong>About Me</strong>
 						</h1>
-					</header>
-				</section>
-				<article>
-					<img src="assets/images/profile_image.jpg" alt="It's me!" height="150" width="200">
-					<p>Hello world! My name is Aaron Lee. I moved to Austin, TX two years ago and like many fell in live with the city. My father was in the military so I was born in Denver, CO but I grew up in Clarksville, TN. I attended college at Auburn University in Auburn, AL. I studied digital art with a focus on 3D art.</p><br>
-					<p>I am very excited about the possibilies that this class will bring me once I have successfully graduated. I do have some coding experience with HTML/CSS, however, this homework assignment was very fun. I was a great way to dust off some of the cobwebs so to speak. Every class/assignment is a new learning experience that is helping ignite my passion for web development!</p>
-				</article>
-			</div>
-		</div>
-		<div>
-			<!-- Connect with Me Sidebar -->
-			<div class="box2">
-				
-				<h2 class="header3">Connect with Me</h2>				
-				<a href="https://github.com/Worldedit05" class="social" alt="Github Profile"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
-				<a href="https://www.linkedin.com/in/worldedit" class="social" alt="LinkedIn Profile"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62"></a>			
-				<a href="https://stackoverflow.com/users/6590906/aaron-lee" class="social" alt="stack overflow Profile"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
-				
-			</div>
-		</div>
-	</div>
-	<div class="push"></div>
-	<footer class="footer">
-		&copy; Copyright 2016 Aaron Lee
-	</footer>
+                    </header>
+                </section>
+                <article>
+                    <img src="assets/images/profile_image.jpg" alt="It's me!" height="150" width="200">
+                    <p>Hello world! My name is Aaron Lee. I moved to Austin, TX two years ago and like many fell in live with the city. My father was in the military so I was born in Denver, CO but I grew up in Clarksville, TN. I attended college at Auburn University in Auburn, AL. I studied digital art with a focus on 3D art.</p>
+                    <br>
+                    <p>I am very excited about the possibilies that this class will bring me once I have successfully graduated. I do have some coding experience with HTML/CSS, however, this homework assignment was very fun. I was a great way to dust off some of the cobwebs so to speak. Every class/assignment is a new learning experience that is helping ignite my passion for web development!</p>
+                </article>
+            </div>
+        </div>
+        <div>
+            <!-- Connect with Me Sidebar -->
+            <div class="box2">
+                <h2 class="header3">Connect with Me</h2>
+                <a href="https://github.com/Worldedit05" class="social" alt="Github Profile"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
+                <a href="https://www.linkedin.com/in/worldedit" class="social" alt="LinkedIn Profile"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62"></a>
+                <a href="https://stackoverflow.com/users/6590906/aaron-lee" class="social" alt="stack overflow Profile"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
+            </div>
+        </div>
+    </div>
+    <div class="push"></div>
+    <footer class="footer">
+        &copy; Copyright 2016 Aaron Lee
+    </footer>
 </body>
+
 </html>
