Last minute adjustments

--- a/assignment1/portfolio.html
+++ b/assignment1/portfolio.html
@@ -78,9 +78,9 @@
                 <!-- Connect with Me Sidebar -->
                 <div class="box2">
                     <h2 class="header3">Connect with Me</h2>
-                    <a href="https://github.com/Worldedit05" class="social" alt="Github Profile"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
-                    <a href="https://www.linkedin.com/in/worldedit" class="social" alt="LinkedIn Profile"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62"></a>
-                    <a href="https://stackoverflow.com/users/6590906/aaron-lee" class="social" alt="stack overflow Profile"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
+                    <a href="https://github.com/Worldedit05" class="social" alt="Github"><img src="assets/images/github_square_black.png" alt="Follow me on Github" height="62" width="62"></a>
+                    <a href="https://www.linkedin.com/in/worldedit" class="social" alt="LinkedIn"><img src="assets/images/linkedin_square_blue.png" alt="Link with me on LinkedIn" height="62" width="62"></a>
+                    <a href="https://stackoverflow.com/users/6590906/aaron-lee" class="social" alt="Stack Overflow"><img src="assets/images/stackoverflow_square_yellow.png" alt="See what I am helping with on StackOverflow" height="62" width="62"></a>
                 </div>
             </div>
         </div>
